# SixFTP

./: Cargo.toml  README.md
src/: gui.rs  main.rs  network_info.rs
