[package]
name = "sixftp"
version = "0.1.0"
edition = "2024"

[dependencies]
#libunftp = "0.21.0"
# Use procr1337's branch for now till MLSD support is merged
libunftp = { git = "https://github.com/procr1337/libunftp.git", branch="mlsd" }
#unftp-sbe-fs = "0.3.0"
unftp-sbe-fs = { git = "https://github.com/procr1337/libunftp.git", branch="mlsd" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
local-ip-address = "0.6"
